Visibility partners block and fixed gallery

--- a/src/styles/blocks/_gallery-events.scss
+++ b/src/styles/blocks/_gallery-events.scss
@@ -1,4 +1,5 @@
 .gallery-events {
+    background: url(../img/bg/gallery-bg.png) no-repeat center top;
     transition: background-size 0.7s ease;
     .section-block__inner {
         position: relative;
