--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,10 +37,6 @@
     border-top: 10px solid transparent;
 }
 
-.gallery-events {
-    background: url(../img/bg/gallery-bg.png) no-repeat center top;
-}
-
 .fixed-nav {
     .header-container {
         position: static;
